# llvm-project

./: .gitignore
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/clang-include-fixer/find-all-symbols/: SymbolInfo.cpp  SymbolInfo.h
clang-tools-extra/clang-include-fixer/find-all-symbols/tool/: FindAllSymbolsMain.cpp
clang-tools-extra/clang-tidy/: ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h
clang-tools-extra/clang-tidy/misc/: CMakeLists.txt  MiscTidyModule.cpp  ModernizeLegacyTypesCheck.cpp  ModernizeLegacyTypesCheck.h
clang-tools-extra/clang-tidy/modernize/: LoopConvertCheck.cpp  UseOverrideCheck.cpp
clang-tools-extra/clang-tidy/readability/: CMakeLists.txt  IncludeNormalizeCheck.cpp  IncludeNormalizeCheck.h  ReadabilityTidyModule.cpp
clang-tools-extra/clangd/index/: Symbol.h  SymbolCollector.cpp  YAMLSerialization.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/docs/clang-tidy/checks/: list.rst  misc-modernize-legacy-types.rst  readability-include-normalize.rst
clang-tools-extra/find-unused-funcs/: CMakeLists.txt
clang-tools-extra/identifier-naming/: CMakeLists.txt
clang-tools-extra/include-fixer/: CMakeLists.txt  IncludeFixer.cpp  IncludeFixerUtils.cpp
clang-tools-extra/test/clang-tidy/checkers/: misc-modernize-legacy-types.cpp  readability-include-normalize.cpp
clang/lib/Format/: DefinitionBlockSeparator.cpp  WhitespaceManager.cpp
clang/unittests/Format/: FormatTestComments.cpp
llvm/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
